--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
 #The version of your plugin
 project.revision=TRUNK-SNAPSHOT
 #The name of your jar and zip artifact
-ivy.artifact.id=echo-plugin
+ivy.artifact.id=pentaho-smartbar-plugin
 #Natural language description of your plugin
-impl.title=Echo Plugin
+impl.title=SmartBar Plugin
 #The root install directory for you pentaho platform
 pentaho.dir=/home/pminutillo/Downloads/5.0/biserver-ee
 pentaho.classes.dir=${pentaho.dir}/tomcat/webapps/pentaho/WEB-INF/classes
