Cleanup, hacked search bar into PUC, resource servlet added

--- a/build.properties
+++ b/build.properties
@@ -5,7 +5,7 @@ ivy.artifact.id=pentaho-smartbar-plugin
 #Natural language description of your plugin
 impl.title=SmartBar Plugin
 #The root install directory for you pentaho platform
-pentaho.dir=/home/pminutillo/Downloads/5.0/biserver-ee
+pentaho.dir=D:/pentaho/biserver-ee
 pentaho.classes.dir=${pentaho.dir}/tomcat/webapps/pentaho/WEB-INF/classes
 pentaho.lib.dir=${pentaho.dir}/tomcat/webapps/pentaho/WEB-INF/lib
 pentaho.solutions.dir=${pentaho.dir}/pentaho-solutions
