--- a/ivy.xml
+++ b/ivy.xml
@@ -1,62 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0" xmlns:m="http://ant.apache.org/ivy/maven">
-  <info organisation='${ivy.artifact.group}' module='${ivy.artifact.id}' revision='${project.revision}' />
+    <info organisation='${ivy.artifact.group}' module='${ivy.artifact.id}' revision='${project.revision}'/>
 
-  <configurations>
-    <conf name="default" />
-    <conf name="test" visibility="private" />
-  </configurations>
+    <configurations>
+        <conf name="default"/>
+        <conf name="test" visibility="private"/>
+    </configurations>
 
-  <publications>
-    <artifact name="${ivy.artifact.id}" type="jar" conf="default" />
-  </publications>
+    <publications>
+        <artifact name="${ivy.artifact.id}" type="jar" conf="default"/>
+    </publications>
 
-  <dependencies defaultconf="default->default">
-    <dependency org="pentaho" name="pentaho-platform-core" rev="${dependency.pentaho-platform.revision}" changing="true" transitive="true" />
+    <dependencies defaultconf="default->default">
+        <dependency org="pentaho" name="pentaho-platform-core" rev="${dependency.pentaho-platform.revision}"
+                    changing="true" transitive="true"/>
 
-    <!--  external dependencies -->
-    <dependency org="commons-logging" name="commons-logging" rev="1.1" transitive="false" />
-    <dependency org="commons-logging" name="commons-logging-api" rev="1.1" transitive="false" />
-    <dependency org="dom4j" name="dom4j" rev="1.6.1" transitive="false" />
-    <dependency org='commons-logging' name='commons-logging-api' rev='1.1' transitive='false' />
-    
-    
-    <dependency org="javax.servlet" name="servlet-api" rev="2.4"/>
-    
-    
-    <!-- START JAX-WS (Service extension) dependencies.  You can comment these out if you are not deploying 
-         a service to the BIServer -->
-    <!-- metro -->
-    <dependency org="metro" name="metro-webservices-api" rev="2.0" />
-    <dependency org="metro" name="metro-webservices-rt" rev="2.0" />
+        <!--  external dependencies -->
+        <dependency org="commons-logging" name="commons-logging" rev="1.1" transitive="false"/>
+        <dependency org="commons-logging" name="commons-logging-api" rev="1.1" transitive="false"/>
+        <dependency org="dom4j" name="dom4j" rev="1.6.1" transitive="false"/>
+        <dependency org='commons-logging' name='commons-logging-api' rev='1.1' transitive='false'/>
 
-    <!-- jaxws-spring extension (allows spring configuration of web services); see pentahoServices.spring.xml -->
-    <dependency org="org.jvnet.jax-ws-commons.spring" name="jaxws-spring" rev="1.8" transitive="false" />
-    <dependency org="org.apache.xbean" name="xbean-spring" rev="2.7" />
-    
-    <!-- jersey -->
-    <dependency org="com.sun.jersey" name="jersey-core" rev="1.3">
-      <artifact name="jersey-core" type="jar"/>
-    </dependency>
-    <!-- END JAX-WS (Service extension) dependencies -->
 
-    <!--  test dependencies -->
-    <dependency org="junit"              name="junit"              rev="4.4" conf="test->default"/>
-        <!--  Testing dependencies -->
-    <dependency org="pentaho" name="pentaho-platform-core-test" rev="${dependency.pentaho-platform.revision}"
-                changing="true" transitive="false" conf="test->default"/>
-    
-	<dependency org="pentaho" name="pentaho-platform-extensions" rev="${dependency.pentaho-platform.revision}" changing="true" transitive="false" conf="default->default"/>    
+        <!-- begin JCR/Jackrabbit -->
+        <dependency org="org.apache.jackrabbit" name="jackrabbit-core" rev="2.4.2"/>
+        <dependency org="org.springframework" name="se-jcr" rev="0.9" transitive="false"/>
+        <dependency org="javax.jcr" name="jcr" rev="2.0" transitive="false"/>
+        <dependency org="javax.transaction" name="jta" rev="1.1" transitive="false"/>
+        <!-- end JCR/Jackrabbit -->
+
+
+        <dependency org="javax.servlet" name="servlet-api" rev="2.4"/>
+
+
+        <!-- START JAX-WS (Service extension) dependencies.  You can comment these out if you are not deploying
+             a service to the BIServer -->
+        <!-- metro -->
+        <dependency org="metro" name="metro-webservices-api" rev="2.0"/>
+        <dependency org="metro" name="metro-webservices-rt" rev="2.0"/>
+
+        <!-- jaxws-spring extension (allows spring configuration of web services); see pentahoServices.spring.xml -->
+        <dependency org="org.jvnet.jax-ws-commons.spring" name="jaxws-spring" rev="1.8" transitive="false"/>
+        <dependency org="org.apache.xbean" name="xbean-spring" rev="2.7"/>
+
         <!-- jersey -->
-    <dependency org="com.sun.jersey.contribs" name="jersey-multipart" rev="1.5"/>
-    <dependency org="com.sun.jersey.contribs" name="jersey-apache-client" rev="1.5" transitive="false"/>
+        <dependency org="com.sun.jersey" name="jersey-core" rev="1.3">
+            <artifact name="jersey-core" type="jar"/>
+        </dependency>
+        <!-- END JAX-WS (Service extension) dependencies -->
 
-    <!-- jersey -->
-    <dependency org="com.sun.jersey" name="jersey-core" rev="1.5" transitive="false"/>
-    <dependency org="com.sun.jersey" name="jersey-json" rev="1.5" transitive="false"/>
-    <dependency org="com.sun.jersey.contribs" name="jersey-spring" rev="1.5" transitive="false"/>
-    <dependency org="com.sun.jersey" name="jersey-client" rev="1.5" transitive="false"/>
-    <dependency org="com.sun.jersey" name="jersey-server" rev="1.5" transitive="false"/>
-    
-  </dependencies>
+        <!--  test dependencies -->
+        <dependency org="junit" name="junit" rev="4.4" conf="test->default"/>
+        <!--  Testing dependencies -->
+        <dependency org="pentaho" name="pentaho-platform-core-test" rev="${dependency.pentaho-platform.revision}"
+                    changing="true" transitive="false" conf="test->default"/>
+
+        <dependency org="pentaho" name="pentaho-platform-extensions" rev="${dependency.pentaho-platform.revision}"
+                    changing="true" transitive="false" conf="default->default"/>
+        <dependency org="pentaho" name="pentaho-platform-repository" rev="${dependency.pentaho-platform.revision}"
+                    changing="true" transitive="false" conf="default->default"/>
+        <!-- jersey -->
+        <dependency org="com.sun.jersey.contribs" name="jersey-multipart" rev="1.5"/>
+        <dependency org="com.sun.jersey.contribs" name="jersey-apache-client" rev="1.5" transitive="false"/>
+
+        <!-- jersey -->
+        <dependency org="com.sun.jersey" name="jersey-core" rev="1.5" transitive="false"/>
+        <dependency org="com.sun.jersey" name="jersey-json" rev="1.5" transitive="false"/>
+        <dependency org="com.sun.jersey.contribs" name="jersey-spring" rev="1.5" transitive="false"/>
+        <dependency org="com.sun.jersey" name="jersey-client" rev="1.5" transitive="false"/>
+        <dependency org="com.sun.jersey" name="jersey-server" rev="1.5" transitive="false"/>
+
+    </dependencies>
 </ivy-module>
